--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,17 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.11.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.9.0",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.542.0",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^7.8.2",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
