--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "moment": "^2.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-feather": "^2.0.10",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-moment": "^1.1.3",
     "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5",
